--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     <body>
         <h1>Sup.</h1>
         <h2>This will look better eventually.</h2>
-        <h3>For now, you can find me on <a href="https://twitter.com/tmercswims" target="_blank" rel="noopener noreferrer">Twitter</a>, <a href="https://github.com/tmercswims" target="_blank" rel="noopener noreferrer">GitHub</a>, and <a href="https://www.linkedin.com/in/thomas-mercurio-63861a10b" target="_blank" rel="noopener noreferrer">LinkedIn</a>.</h3>
+        <h3>For now, you can find me on <a href="https://twitter.com/tmercswims" target="_blank" rel="noopener noreferrer">Twitter</a>, <a href="https://github.com/tmercswims" target="_blank" rel="noopener noreferrer">GitHub</a>, and <a href="https://www.linkedin.com/in/tmerc" target="_blank" rel="noopener noreferrer">LinkedIn</a>.</h3>
     </body>
 </html>
